// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert tab dynamically 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist" class="van-tabs__nav van-tabs__nav--line">
      <div role="tab" class="van-tab"><span class="van-tab__text van-tab__text--ellipsis">1</span></div>
      <div role="tab" aria-selected="true" class="van-tab van-tab--active"><span class="van-tab__text van-tab__text--ellipsis">2</span></div>
      <div role="tab" class="van-tab"><span class="van-tab__text van-tab__text--ellipsis">3</span></div>
      <div class="van-tabs__line" style="transform: translateX(0px) translateX(-50%);"></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel" class="van-tab__pane" style="display: none;">
      <!---->
    </div>
    <div>
      <div role="tabpanel" class="van-tab__pane">2</div>
    </div>
    <div role="tabpanel" class="van-tab__pane" style="display: none;">3</div>
  </div>
</div>
`;

exports[`insert tab with child component 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist" class="van-tabs__nav van-tabs__nav--line">
      <div role="tab" aria-selected="true" class="van-tab van-tab--active"><span class="van-tab__text van-tab__text--ellipsis">1</span></div>
      <div role="tab" class="van-tab"><span class="van-tab__text van-tab__text--ellipsis">2</span></div>
      <div role="tab" class="van-tab"><span class="van-tab__text van-tab__text--ellipsis">3</span></div>
      <div class="van-tabs__line"></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel" class="van-tab__pane">1</div>
    <div role="tabpanel" class="van-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="van-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`insert tab with name dynamically 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist" class="van-tabs__nav van-tabs__nav--line">
      <div role="tab" class="van-tab"><span class="van-tab__text van-tab__text--ellipsis">1</span></div>
      <div role="tab" aria-selected="true" class="van-tab van-tab--active"><span class="van-tab__text van-tab__text--ellipsis">2</span></div>
      <div class="van-tabs__line" style="transform: translateX(0px) translateX(-50%);"></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel" class="van-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="van-tab__pane" style="">1</div>
  </div>
</div>
`;
